Design: landing page

--- a/style.css
+++ b/style.css
@@ -1,12 +1,36 @@
 @charset "UTF-8";
 
+#main_title{
+    margin: 0px 250px 0px 250px;
+    height: 100px;
+    display:flex;
+    align-items:center;
+}
+
 #title {
-    font-size: 24px;
+    font-size: 55px;
     font-weight: bold;
     color: white;
     background-color: black;
     height: 100px;
     width: 100%;
+}
+
+#search_group{
+    padding: 100px 250px 70px 250px;
+}
+
+#address_search{
+    margin: 0 auto;
+    position: relative;
+    display: table;
+    border-collapse: separate;
+}
+
+#input_search{
+    width:380px;
+    height:50px;
+    font-size:30px;
 }
 
 #landing_search {
@@ -20,8 +44,8 @@
 
 #landing_form {
     background-color: blue;
-    width: 80%;
-    height: 80%;
+    width: 65%;
+    height: auto;
     margin: 0 auto;
     line-height: normal;
     display: flex;
@@ -51,3 +75,4 @@
 #last {
     background-color: rgb(192, 192, 192);
 }
+
